# aiohttp-csrf

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements_dev.txt  test.py
.github/workflows/: check.yml  publish.yml
aiohttp_csrf/: __init__.py  policy.py  storage.py  token_generator.py
demo/: manual_protection.py  middleware.py  session_storage.py
tests/: conftest.py  test_custom_error_renderer.py  test_errors.py  test_exempt_decorator.py  test_form_policy.py  test_header_policy.py  test_protect_decorator.py  test_storage_api.py  test_token_generator.py
