[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aiohttp_csrf"
description = "CSRF protection for aiohttp-server"
authors = [
  { name="TensorTom"},
  { name="shuckc", email="chris@shucksmith.co.uk" },
]
license = { file= "LICENSE"}
readme = "README.md"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/shuckc/aiohttp-csrf"

[tool.ruff.lint]
extend-select = ["I"]

[tool.setuptools]
packages = ["aiohttp_csrf"]
